idf_component_register(
	SRC_DIRS
	"3rd-party/bluedroid/decoder/srce"
	"3rd-party/bluedroid/encoder/srce"
	"3rd-party/hxcmod-player"
	"3rd-party/hxcmod-player/mods"
	"$ENV{IDF_PATH}/components/lwip/lwip/src/apps/http"
	"3rd-party/md5"
	"3rd-party/micro-ecc"
	"3rd-party/lwip/dhcp-server"
	"src/ble/gatt-service"
	"src/ble"
	"src/classic"
	"src/mesh"
	"src/"
	"platform/freertos"
	"platform/lwip"
	"."
	INCLUDE_DIRS
	"3rd-party/bluedroid/decoder/include"
	"3rd-party/bluedroid/encoder/include"
	"3rd-party/hxcmod-player"
	"3rd-party/hxcmod-player/mods"
	"$ENV{IDF_PATH}/components/lwip/lwip/src/include"
	"3rd-party/lwip/dhcp-server"
	"3rd-party/md5"
	"3rd-party/yxml"
	"src/classic"
	"src/ble/gatt-service"
	"src/ble"
	"src/classic"
	"src"
	"platform/embedded"
	"platform/freertos"
	"platform/lwip"
	"include"
	PRIV_INCLUDE_DIRS
	"3rd-party/micro-ecc"
	PRIV_REQUIRES
	"nvs_flash"
	"bt"
)
